discussion/kv_engine/183423/183423_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

Disable test of TLS1[.1] for OpenSSL 3

It seems like TLS 1 and TLS 1.1 is disabled by default
on OpenSSL 3.0 (at least on Ubuntu 22.04)

Change-Id: I34bb5b24fdc92a4d79acdc2286c2403c8a616172

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-11-30 07:46:03.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-11-30 07:52:05.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/43085/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/43085/ )

CMake error: CMakeLists.txt:170 (MESSAGE) ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/43085/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/51323/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/51323/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/11849/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/11849/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/792/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/792/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/23564/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/23564/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/11759/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/11759/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/24493/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/24493/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/24080/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/24080/ )

Compile error at [2022-11-30T07:51:20.131Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/tests/testapp/testapp_tls.cc:89:9:
error: ?OPENSSL_VERSION_MAJOR? was not declared in this scope; did you mean ?OPENSSL_VERSION_NUMBER??
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/24080/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/32496/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/32496/ )

Clang linker error: linker command failed due to signal (use -v to see invocation) ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/32496/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22043/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp/testapp_tls.cc:89:9: error: use of undeclared identifier "OPENSSL_VERSION_MAJOR" [clang-diagnostic-error]
    if (OPENSSL_VERSION_MAJOR > 1) {
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp/testapp_tls.cc:101:9: error: use of undeclared identifier "OPENSSL_VERSION_MAJOR" [clang-diagnostic-error]
    if (OPENSSL_VERSION_MAJOR > 1) {
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp/testapp_tls.cc:136:9: error: use of undeclared identifier "OPENSSL_VERSION_MAJOR" [clang-diagnostic-error]
    if (OPENSSL_VERSION_MAJOR == 1) {
        ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22043/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp/testapp_tls.cc:89:9:
error: use of undeclared identifier "OPENSSL_VERSION_MAJOR" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22043/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/25347/ : FAILURE

Compile error at [2022-11-30T07:49:13.237Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/tests/testapp/testapp_tls.cc:89:9:
error: use of undeclared identifier "OPENSSL_VERSION_MAJOR"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/25347/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/21564/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
